test/zinc_source/compile_errors/decorators/07_async_unsupported.zn
// expected-error: async function decorator support is not implemented yet: 'work'
@trace
async work() {
    print(1)
}

fn main() {
    print(1)
}
